Misc fixes and new add row function