@@ -14,10 +14,9 @@ import javafx.scene.control.*;
 import javafx.scene.control.cell.TextFieldTableCell;
 import model.*;
 
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
+import java.util.Objects;
 import java.util.stream.Collectors;
 
 public class InventoryController {
@@ -31,42 +30,52 @@ public class InventoryController {
     @FXML private Button casBttn;
     @FXML private Button adminBttn;
     @FXML private Button tableBttn;
+    @FXML private Button addRowBtn;
 
     private User currentUser;
     private String currentTableName;
     private final ObservableList<ObservableList<String>> fullData = FXCollections.observableArrayList();
 
     private final MetadataService metadata = new MetadataService();
-    private final QueryManager  queries  = new QueryManager();
+    private final QueryManager    queries  = new QueryManager();
 
     @FXML
     public void initialize() {
+
         try {
             List<String> tables = metadata.listTables();
-            if (tables != null) {
-                categoriesList.setItems(FXCollections.observableArrayList(tables));
-            }
+            if (tables != null) categoriesList.setItems(FXCollections.observableArrayList(tables));
         } catch (Exception e) {
             statusBar.setText("Error loading table list: " + e.getMessage());
         }
 
-        categoriesList.getSelectionModel().selectedItemProperty().addListener((obs, oldTable, newTable) -> {
-            if (newTable != null) {
+        if (tableBttn != null && categoriesList != null) {
+            tableBttn.setOnAction(evt -> {
+                boolean visible = categoriesList.isVisible();
+                categoriesList.setVisible(!visible);
+                categoriesList.setManaged(!visible);
+            });
+        }
+
+        categoriesList.getSelectionModel().selectedItemProperty().addListener((obs, o, n) -> {
+            if (n != null) {
                 searchField.clear();
-                loadTable(newTable);
+                loadTable(n);
             }
+            if (addRowBtn != null) addRowBtn.setDisable(n == null || !isAdmin());
         });
 
         searchField.setOnAction(evt -> doSearch());
         searchButton.setOnAction(evt -> doSearch());
-        if (toggleBtn != null) {
-            toggleBtn.setOnAction(evt -> {
-                if (!searchField.getText().trim().isEmpty()) doSearch();
-            });
-        }
+        if (toggleBtn != null) toggleBtn.setOnAction(evt -> {
+            if (!searchField.getText().trim().isEmpty()) doSearch();
+        });
 
-        if (casBttn != null) {
-            casBttn.setOnAction(evt -> promptCas());
+        if (casBttn != null) casBttn.setOnAction(evt -> promptCas());
+
+        if (addRowBtn != null) {
+            addRowBtn.setDisable(true);
+            addRowBtn.setOnAction(evt -> showAddDialog());
         }
 
         applyRolePermissions();
@@ -78,42 +87,37 @@ public class InventoryController {
             dataTable.getColumns().clear();
             fullData.clear();
 
-            List<ColumnData> columnDataList = metadata.getColumns(tableName);
-            List<String> columnNames = columnDataList.stream().map(ColumnData::getName).collect(Collectors.toList());
+            List<ColumnData> meta  = metadata.getColumns(tableName);
+            List<String>     names = meta.stream().map(ColumnData::getName).collect(Collectors.toList());
 
-            List<Map<String, Object>> rowMaps = queries.selectAll(tableName);
-            for (Map<String, Object> map : rowMaps) {
-                ObservableList<String> row = FXCollections.observableArrayList();
-                for (String colName : columnNames) {
-                    Object val = map.get(colName);
-                    row.add(val == null ? "" : val.toString());
-                }
-                fullData.add(row);
+            List<Map<String,Object>> rows = queries.selectAll(tableName);
+            for (Map<String,Object> m : rows) {
+                ObservableList<String> r = FXCollections.observableArrayList();
+                for (String c : names) r.add(Objects.toString(m.get(c), ""));
+                fullData.add(r);
             }
 
-            for (int i = 0; i < columnNames.size(); i++) {
-                final int colIndex = i;
-                final String colName = columnNames.get(i);
+            for (int i = 0; i < names.size(); i++) {
+                final int idx = i;
+                final String colName = names.get(i);
                 TableColumn<ObservableList<String>, String> col = new TableColumn<>(colName);
-                col.setCellValueFactory(cellData -> {
-                    ObservableList<String> rowValues = cellData.getValue();
-                    String value = (rowValues != null && colIndex < rowValues.size()) ? rowValues.get(colIndex) : "";
-                    return new SimpleStringProperty(value);
-                });
+                col.setCellValueFactory(cd -> new SimpleStringProperty(cd.getValue().get(idx)));
 
-                boolean isAdmin = currentUser != null && "admin".equalsIgnoreCase(currentUser.getRole());
-                if (isAdmin) {
+                ColumnData cMeta = meta.get(i);
+                if (cMeta.isPrimaryKey() && "COUNTER".equalsIgnoreCase(cMeta.getType())) {
+                    col.setVisible(false);
+                    col.setPrefWidth(0);
+                }
+
+                if (isAdmin()) {
                     col.setEditable(true);
                     col.setCellFactory(TextFieldTableCell.forTableColumn());
-                    col.setOnEditCommit(evt -> {
-                        ObservableList<String> rowData = evt.getRowValue();
-                        String newValue = evt.getNewValue();
-                        String oldValue = evt.getOldValue();
-                        if (!newValue.equals(oldValue)) {
-                            String idValue = rowData.get(0);
-                            queries.updateRow(tableName, Map.of(colName, newValue), idValue);
-                            rowData.set(colIndex, newValue);
-                            statusBar.setText("Updated " + colName + " for ID " + idValue);
+                    col.setOnEditCommit(ev -> {
+                        ObservableList<String> row = ev.getRowValue();
+                        if (!ev.getNewValue().equals(ev.getOldValue())) {
+                            queries.updateRow(tableName, Map.of(colName, ev.getNewValue()), row.get(0));
+                            row.set(idx, ev.getNewValue());
+                            statusBar.setText("Updated " + colName);
                         }
                     });
                 }
@@ -121,63 +125,41 @@ public class InventoryController {
             }
 
             dataTable.setItems(fullData);
-            dataTable.setEditable(currentUser != null && "admin".equalsIgnoreCase(currentUser.getRole()));
+            dataTable.setEditable(isAdmin());
+            statusBar.setText("Loaded \"" + tableName + "\" (" + fullData.size() + " rows)");
 
-            /* row double-click opens details dialog */
-            dataTable.setRowFactory(tv -> {
-                TableRow<ObservableList<String>> row = new TableRow<>();
-                row.setOnMouseClicked(evt -> {
-                    if (evt.getClickCount() == 2 && !row.isEmpty()) {
-                        ObservableList<String> vals = row.getItem();
-                        Map<String,Object> map = new LinkedHashMap<>();
-                        for (int i = 0; i < dataTable.getColumns().size(); i++) {
-                            String colName = dataTable.getColumns().get(i).getText();
-                            map.put(colName, vals.get(i));
-                        }
-                        new RowDetailsDialog(dataTable.getScene().getWindow(), currentTableName, map).showAndWait();
-                    }
-                });
-                return row;
-            });
-
-            statusBar.setText("Loaded table \"" + tableName + "\" (" + fullData.size() + " rows)");
         } catch (Exception e) {
             statusBar.setText("Error loading table \"" + tableName + "\": " + e.getMessage());
         }
     }
 
     private void doSearch() {
-        if (currentTableName == null || currentTableName.isEmpty()) return;
-
-        String queryText = searchField.getText().trim();
-        if (queryText.isEmpty()) {
+        if (currentTableName == null) return;
+        String q = searchField.getText().trim();
+        if (q.isEmpty()) {
             dataTable.setItems(fullData);
-            statusBar.setText("Showing all rows for \"" + currentTableName + "\"");
+            statusBar.setText("Showing all rows");
             return;
         }
 
         try {
-            boolean useClientFilter = toggleBtn != null && toggleBtn.isSelected();
-            if (useClientFilter) {
-                FilteredList<ObservableList<String>> filtered = new FilteredList<>(fullData, row ->
-                        row.stream().anyMatch(cell -> cell != null && cell.toLowerCase().contains(queryText.toLowerCase())));
-                dataTable.setItems(filtered);
-                statusBar.setText("Filtered results: " + filtered.size() + " rows match \"" + queryText + "\"");
+            if (toggleBtn != null && toggleBtn.isSelected()) {
+                FilteredList<ObservableList<String>> fl = new FilteredList<>(fullData,
+                        r -> r.stream().anyMatch(c -> c.toLowerCase().contains(q.toLowerCase())));
+                dataTable.setItems(fl);
+                statusBar.setText(fl.size() + " rows match \"" + q + "\"");
             } else {
-                List<Map<String, Object>> matches = queries.search(currentTableName, queryText);
-                List<String> colNames = metadata.getColumns(currentTableName).stream().map(ColumnData::getName).toList();
-
-                ObservableList<ObservableList<String>> searchData = FXCollections.observableArrayList();
-                for (Map<String, Object> map : matches) {
-                    ObservableList<String> row = FXCollections.observableArrayList();
-                    for (String col : colNames) {
-                        Object val = map.get(col);
-                        row.add(val == null ? "" : val.toString());
-                    }
-                    searchData.add(row);
+                List<Map<String,Object>> matches = queries.search(currentTableName, q);
+                List<String> cols = metadata.getColumns(currentTableName).stream()
+                        .map(ColumnData::getName).collect(Collectors.toList());
+                ObservableList<ObservableList<String>> data = FXCollections.observableArrayList();
+                for (Map<String,Object> m : matches) {
+                    ObservableList<String> r = FXCollections.observableArrayList();
+                    for (String c : cols) r.add(Objects.toString(m.get(c), ""));
+                    data.add(r);
                 }
-                dataTable.setItems(searchData);
-                statusBar.setText("Search results: " + searchData.size() + " rows found for \"" + queryText + "\"");
+                dataTable.setItems(data);
+                statusBar.setText(data.size() + " rows found");
             }
         } catch (Exception e) {
             statusBar.setText("Search error: " + e.getMessage());
@@ -185,37 +167,42 @@ public class InventoryController {
     }
 
     private void promptCas() {
-        TextInputDialog dialog = new TextInputDialog();
-        dialog.setTitle("Lookup by CAS");
-        dialog.setHeaderText("Enter a CAS Number to search in PubChem");
-        dialog.setContentText("CAS Number:");
-        Optional<String> result = dialog.showAndWait();
-        result.ifPresent(cas -> {
-            String casNo = cas.trim();
-            if (!casNo.isEmpty()) {
-                try {
-                    new PubChemService().browseByCas(casNo);
-                    statusBar.setText("Opened PubChem search for CAS " + casNo);
-                } catch (Exception e) {
-                    statusBar.setText("Failed to lookup CAS " + casNo + ": " + e.getMessage());
-                }
+        TextInputDialog d = new TextInputDialog();
+        d.setTitle("Lookup by CAS");
+        d.setHeaderText(null);
+        d.setContentText("CAS Number:");
+        d.showAndWait().ifPresent(cas -> {
+            if (!cas.trim().isEmpty()) {
+                try { new PubChemService().browseByCas(cas.trim()); }
+                catch (Exception ex) { statusBar.setText("CAS lookup failed"); }
             }
         });
     }
 
     private void applyRolePermissions() {
-        boolean isAdmin = currentUser != null && "admin".equalsIgnoreCase(currentUser.getRole());
         if (adminBttn != null) {
-            adminBttn.setVisible(isAdmin);
-            adminBttn.setManaged(isAdmin);
+            adminBttn.setVisible(isAdmin());
+            adminBttn.setManaged(isAdmin());
         }
-        if (dataTable != null) {
-            dataTable.setEditable(isAdmin);
-        }
+        if (dataTable != null) dataTable.setEditable(isAdmin());
+        if (addRowBtn != null)  addRowBtn.setDisable(!isAdmin());
     }
 
     public void setCurrentUser(User user) {
         this.currentUser = user;
         applyRolePermissions();
+    }
+
+    private boolean isAdmin() {
+        return currentUser != null && "admin".equalsIgnoreCase(currentUser.getRole());
+    }
+
+    private void showAddDialog() {
+        if (currentTableName == null) return;
+        List<ColumnData> cols = metadata.getColumns(currentTableName);
+        new AddRowDialog(dataTable.getScene().getWindow(), currentTableName, cols, v -> {
+            queries.insertRow(currentTableName, v);
+            loadTable(currentTableName);
+        }).showAndWait();
     }
 }
